--- a/pcb/Properties/UIresources.resx
+++ b/pcb/Properties/UIresources.resx
@@ -307,7 +307,10 @@
   <data name="toCBSetblock" xml:space="preserve">
     <value>convert to cb setblock</value>
   </data>
-  <data name="generateOptions" xml:space="preserve">
-    <value>pretend the selected region is standalone pcb?</value>
+  <data name="updateCommands" xml:space="preserve">
+    <value>update Commands</value>
+  </data>
+  <data name="updateCommandsTooltip" xml:space="preserve">
+    <value>generate ooc that will replace only the selected commands(be careful)</value>
   </data>
 </root>
