--- a/pcb/Properties/UIresources.zh.resx
+++ b/pcb/Properties/UIresources.zh.resx
@@ -327,7 +327,10 @@
   <data name="toCBSetblock" xml:space="preserve">
     <value>转换为cb setblock指令</value>
   </data>
-  <data name="generateOptions" xml:space="preserve">
-    <value>是否把选择范围当作独立pcb生成</value>
+  <data name="updateCommands" xml:space="preserve">
+    <value>更新命令</value>
+  </data>
+  <data name="updateCommandsTooltip" xml:space="preserve">
+    <value>生成OOC覆盖选择了的命令</value>
   </data>
 </root>
