--- a/pcb/Properties/UIresources.zh.resx
+++ b/pcb/Properties/UIresources.zh.resx
@@ -354,4 +354,10 @@
   <data name="about" xml:space="preserve">
     <value>关于</value>
   </data>
+  <data name="custom_functions" xml:space="preserve">
+    <value>自定义功能</value>
+  </data>
+  <data name="view_NBT" xml:space="preserve">
+    <value>查看NBT</value>
+  </data>
 </root>
