--- a/pcb/Properties/UIresources.zh.resx
+++ b/pcb/Properties/UIresources.zh.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="pcbName" xml:space="preserve">
-    <value>懒癌卫士-OOC生成器</value>
+    <value>懒癌卫士-命令编辑器</value>
   </data>
   <data name="lastSaved" xml:space="preserve">
     <value>最后储存:</value>
@@ -359,5 +359,11 @@
   </data>
   <data name="view_NBT" xml:space="preserve">
     <value>查看NBT</value>
+  </data>
+  <data name="stats" xml:space="preserve">
+    <value>统计</value>
+  </data>
+  <data name="stats_content" xml:space="preserve">
+    <value>总注释数: {0}\n多行注释数: {1}\n单行注释数: {2}\n命令数(init/last/stats): {3}\n实体数: {4}\n模块数: {5}\n命令方块数: {6}</value>
   </data>
 </root>
