fixed some bugs. added user control for ooc char limit. added parsing for defines. added $nbt function, but it is still very weak...

--- a/pcb/Properties/UIresources.resx
+++ b/pcb/Properties/UIresources.resx
@@ -352,4 +352,7 @@
   <data name="versionDetected" xml:space="preserve">
     <value>Update Detected!</value>
   </data>
+  <data name="ooc_limit" xml:space="preserve">
+    <value>OOC char Limit</value>
+  </data>
 </root>
