fixed tones of bugs

--- a/pcb/Properties/UIresources.zh.resx
+++ b/pcb/Properties/UIresources.zh.resx
@@ -349,7 +349,7 @@
     <value>全选</value>
   </data>
   <data name="intro" xml:space="preserve">
-    <value>PCB --- 命令编辑器、生成器。&lt;br&gt;作者: pca006132&lt;br&gt;版本: {0}</value>
+    <value>PCB --- 命令编辑器、生成器。&lt;br&gt;作者: pca006132&lt;br&gt;版本: {0}&lt;br&gt;我们的网站: www.pcapcb.com</value>
   </data>
   <data name="about" xml:space="preserve">
     <value>关于</value>
