--- a/pcb/Properties/Resources.resx
+++ b/pcb/Properties/Resources.resx
@@ -198,4 +198,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>cancel</value>
   </data>
+  <data name="math_help" xml:space="preserve">
+    <value>supported operators: +, -, *, /, %(mod), +=, -=, *=, /=, %=, =\noperands: Number(integer), &lt;selector&gt;.&lt;objective&gt;, \n&lt;fakePlayer&gt;.&lt;objective&gt;\nbrackets are supported\nexample: @e.scb = (@p.scb + 1)*3</value>
+  </data>
 </root>
